# warezdude

./: .gitignore  CMakeLists.txt  Intro.itf  README.md  Readme.txt  Release.txt  SConstruct  cmake_build.sh  config.cfg  intro.itf  keys.cfg  main.cpp  protocol  resource.h  warezdude.sln  warezdude.vcxproj  warezdude.vcxproj.filters  warezdude2.aps  warezdude2.rc  warezdude2.sln  warezdude2.vcproj
_dev_pics/: EndScreen.psd  Icons.tga  Items.tga  Thumbs.db  bullet.tga  chars.tga  doors.psd  human.tga  kosmonautas.psd  list.txt  logo.psd  monster.tga  shudas.map  story.psd  tileset.psd  title.psd  worm.map
data/: gameData.xml
editor/: .sconsign.dblite  DUDED  SConstruct  duded.ini
editor/pics/: clist.txt  human.tga  tileset.tga
editor/src/: Button.h  Utils.cpp  Utils.h  main.cpp
maps/: bman.map  bman.xml  bunkers.map  bunkers.xml  list.txt  list.xml  maelstrom.map  maelstrom.xml  mazas.map  mazas.xml  mk.map  mk.xml  network.map  network.xml  test.map  test.xml  wd2m2.map  wd2m2.xml  worm.map  worm.xml
pics/: Icons.tga  Items.tga  Thumbs.db  blood.tga  bullet.tga  charai.tga  cop.tga  cross.tga  digits.tga  end.tga  gameover.tga  human.tga  imagesToLoad.xml  intro.tga  list.txt  logo.tga  mini.tga  monstar.tga  monster.tga  nitems.tga  nofate.tga  pointer.tga  tileset.tga  title.tga
sfx/: list.txt
shaders/: default.frag  default.vert  default_frag.spv  default_vert.spv  justcolor.vert  justcolor_frag.spv  justcolor_vert.spv  vk_default.frag  vk_default.vert  vk_justcolor.frag  vk_justcolor.vert
src/: ActionKeys.h  ActiveControl.h  BasicControl.h  BulletContainer.cpp  BulletContainer.h  CClient.cpp  CClient.h  CServer.cpp  CServer.h  Collection.cpp  Collection.h  Colors.h  Consts.h  DArray.h  Decal.cpp  Decal.h  Dude.cpp  Dude.h  EditBox.cpp  EditBox.h  Extensions.cpp  Extensions.h  Game.cpp  Game.h  GameData.cpp  GameData.h  Image.cpp  Image.h  Input.cpp  Intro.cpp  Intro.h  Inventory.cpp  Inventory.h  Item.h  MapGenerator.cpp  MapGenerator.h  MathTools.cpp  MathTools.h  Matrix.cpp  Matrix.h  (+53 more)
src/audio/: AndroidSoundSystem.cpp  AndroidSoundSystem.h  OggStream.cpp  OggStream.h  SoundSystem.cpp  SoundSystem.h  oggplay.cpp  oggplay.h
src/gui/: BasicUiControl.h  Button.cpp  Button.h  EditBox.cpp  EditBox.h  OnScreenBoard.cpp  OnScreenBoard.h  Scrollbar.cpp  Scrollbar.h  SelectMenu.cpp  SelectMenu.h  Slider.cpp  Slider.h  Text.cpp  Text.h  YesNoDialog.cpp  YesNoDialog.h
src/network/: .CServer.h.swp  .Socket.h.swp  CClient.cpp  CServer.cpp  CServer.h  Client.cpp  Client.h  Message.h  Server.cpp  Server.h  Socket.cpp  Socket.h
tests/: Makefile  Test_DArray.cpp  Test_MapGenerator.cpp  test
